<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="SORTER_VAR" Id="{93459d03-c87f-4d33-b1dd-f220324ff5e6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
I_LOTBOX_CLAMP_ON_1 AT %I* : BOOL;
I_LOTBOX_CLAMP_ON_2 AT %I* : BOOL;
I_LOTBOX_CLAMP_ON_3 AT %I* : BOOL;
I_LOTBOX_CLAMP_ON_4 AT %I* : BOOL;
I_LOTBOX_CLAMP_OFF_1 AT %I* : BOOL;
I_LOTBOX_CLAMP_OFF_2 AT %I* : BOOL;
I_LOTBOX_CLAMP_OFF_3 AT %I* : BOOL;
I_LOTBOX_CLAMP_OFF_4 AT %I* : BOOL;
	
I_LOTBOX_DETECT_1 AT %I* : BOOL;//LOTBOX_LASER1_DETECT
I_LOTBOX_DETECT_2 AT %I* : BOOL;//LOTBOX_LASER2_DETECT
I_LOTBOX_DETECT_3 AT %I* : BOOL;//LOTBOX_LASER3_DETECT
I_LOTBOX_DETECT_4 AT %I* : BOOL;//LOTBOX_LASER4_DETECT

I_VACUUM_ON AT %I* : BOOL;
I_VACUUM_OFF AT %I* : BOOL;

I_RETURN_DONE_A: BOOL;
I_RETURN_DONE_B: BOOL;
I_RETURN_DONE_NG: BOOL;
I_LOADING_DONE_A: BOOL;
I_LOADING_DONE_B: BOOL;
I_LOADING_DONE_NG : BOOL; 
I_LASER_ONDUTY_A:BOOL;
I_LASER_ONDUTY_B:BOOL;
I_LASER_ONDUTY_NG:BOOL;
I_LASER_SOCKET : T_JIG_SOCKET; 
I_CURRENT_TRANSACTION : T_CURRENT_TRANSACTION ;
I_LASER_TRANSFER_AT_FRONT_A AT %I* : BOOL;
I_LASER_TRANSFER_AT_BACK_A AT %I* : BOOL;
I_LASER_TRANSFER_AT_FRONT_B AT %I* : BOOL;
I_LASER_TRANSFER_AT_BACK_B AT %I* : BOOL;
I_NG_TRANSFER_AT_FRONT_B AT %I* : BOOL;
I_NG_TRANSFER_AT_BACK_B AT %I* : BOOL;
I_LASER_TRANSFER_A_PICK_DONE : BOOL;
I_LASER_TRANSFER_B_PICK_DONE : BOOL;
I_LASER_TRANSFER_AT_A : BOOL;
I_LASER_TRANSFER_AT_B : BOOL;
I_FUKUDA_TRANSFER_A_PICKING:BOOL;
I_LOTEND:BOOL;
I_LASER_TRANSFER_A_PICKING:BYTE;

//I_LOTEND :BOOL :=FALSE;
I_CARTESSIAN_GRIPPER_ON AT %I* : BOOL;
I_CARTESSIAN_GRIPPER_OFF AT %I* : BOOL;
I_FUNCTION_NAME :STRING [255];
I_CASE : INT:=0;
I_NG_CASE : INT :=100;
I_LASER_RUNNING:BOOL :=FALSE;

O_LOTBOX_CLAMP_ON_1 AT %Q* : BOOL;
O_LOTBOX_CLAMP_ON_2 AT %Q* : BOOL;
O_LOTBOX_CLAMP_ON_3 AT %Q* : BOOL;
O_LOTBOX_CLAMP_ON_4 AT %Q* : BOOL;
O_LOTBOX_CLAMP_OFF_1 AT %Q* : BOOL;
O_LOTBOX_CLAMP_OFF_2 AT %Q* : BOOL;
O_LOTBOX_CLAMP_OFF_3 AT %Q* : BOOL;
O_LOTBOX_CLAMP_OFF_4 AT %Q* : BOOL;

O_VACUUM_ON AT %Q* : BOOL;
O_VACUUM_OFF AT %Q* : BOOL;
O_CARTESSIAN_GRIPPER_ON AT %Q* : BOOL;
O_CARTESSIAN_GRIPPER_OFF AT %Q* : BOOL;
O_TOWER_LAMP_RED AT %Q* : BOOL;
O_TOWER_LAMP_YELLOW AT %Q* : BOOL;
O_TOWER_LAMP_GREEN AT %Q* : BOOL;
O_TOWER_LAMP_BUZZER AT %Q* : BOOL;
O_WARNING_LIGHT AT %Q* : BOOL;
O_LOT_BOX_INDICATOR_1  AT %Q* : BOOL;
O_LOT_BOX_INDICATOR_2 AT %Q* : BOOL;
O_LOT_BOX_INDICATOR_3 AT %Q* : BOOL;
O_LOT_BOX_INDICATOR_4 AT %Q* : BOOL;

AXIS_COMPLETE: BOOL;
JIG_LASER_PRESENCE: BOOL;
LOTBOX_READY_1: BOOL;

DataWordInput1 AT %IB232 : ARRAY [0..15] OF WORD; 
DataWordInput2 AT %IB264 : ARRAY [16..31] OF WORD;
DataWordInput3 AT %IB296 : ARRAY [32..47] OF WORD; 
DataWordInput4 AT %IB328 : ARRAY [48..56] OF WORD; 
DataWordOutput1 AT %QB232 : ARRAY [0..15] OF WORD; 
DataWordOutput2 AT %QB264 : ARRAY [16..31] OF WORD; 
DataWordOutput3 AT %QB296 : ARRAY [32..47] OF WORD; 
DataWordOutput4 AT %QB328 : ARRAY [48..56] OF WORD; 

I_NG_BUFFER_ON AT %I* : BOOL;
I_NG_BUFFER_OFF AT %I* : BOOL;
I_NG_BOX_DETECT_1 AT %I* : BOOL;
I_NG_BOX_DETECT_2 AT %I* : BOOL;
I_NG_BOX_DETECT_3 AT %I* : BOOL;
I_NG_BOX_DETECT_4 AT %I* : BOOL;
I_NG_HOME :BOOL;
I_NG_TRANSFER_AT_BACK AT %I* : BOOL;
I_NG_TRANSFER_AT_FRONT AT %I* : BOOL;

O_NG_DATA_OUTPUT1 AT %Q* : BOOL;
O_NG_DATA_OUTPUT2 AT %Q* : BOOL;
O_NG_DATA_OUTPUT3 AT %Q* : BOOL;
O_NG_DATA_OUTPUT4 AT %Q* : BOOL;
O_NG_BUFFER_ON AT %Q* : BOOL;
O_NG_BUFFER_OFF AT %Q* : BOOL;
O_NG_HOMING :BOOL;
O_NG_BOX_INDICATOR_1 AT %Q* : BOOL;
O_NG_BOX_INDICATOR_2 AT %Q* : BOOL;
O_NG_BOX_INDICATOR_3 AT %Q* : BOOL;
O_NG_BOX_INDICATOR_4 AT %Q* : BOOL;
O_NG_DATA_STOP AT %Q* : BOOL;
O_NG_DATA_RESET AT %Q* : BOOL;
RETURN_NG_IDX:BYTE;
LOAD_NG_IDX:BYTE;
//I_RETURN_DONE_A: BOOL;
//I_RETURN_DONE_B: BOOL;
//I_LOADING_DONE_A: BOOL;
//I_LOADING_DONE_B: BOOL;
I_RETURN_ALARM: INT;
I_RETURN_FAILED: BOOL;
ACTIVE_ID: INT :=1;	
ACTIVE_PROGRAM: INT ;
ACTIVE_PROGRAM_CHANGE:BOOL;
	
I_LASER_HOME : BOOL;
O_LASER_HOME : BOOL;

STRAIGHTEN_START: BOOL;
STRAIGHTEN_PROCESS: BOOL;
STRAIGHTEN_DONE: BOOL;

LASER_HOME: BOOL;

O_STOPPER_TRANSFER_A AT %Q* : BOOL;
O_STOPPER_TRANSFER_B AT %Q* : BOOL;
I_STOPPER_TRANSFER_ON_A AT %Q* : BOOL;
I_STOPPER_TRANSFER_OFF_A AT %Q* : BOOL;
I_STOPPER_TRANSFER_ON_B AT %Q* : BOOL;
I_STOPPER_TRANSFER_OFF_B AT %Q* : BOOL;
O_RESET_CARTESSIAN AT %Q* : BOOL;

TRANSPORT_IDX: BYTE;
STATION_LOAD_IDX: BYTE;
STATION_RETURN_IDX: BYTE;
JIG_LOAD_IDX: BYTE;
JIG_RETURN_IDX: BYTE;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>