<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="MAIN" Id="{7c8980ea-33fa-43d8-a78f-e548a5c87807}" SpecialFunc="None">
    <Declaration><![CDATA[ PROGRAM MAIN

VAR

	EKE: BOOL; 
	STEP: INT :=1;
	
	TMR100: TON;
	stage: INT :=0;
	IC_CASE: INT :=0;
	
	START_STR: F_TRIG;
	START_G6: R_TRIG;
	I_RS4_PICKING_DONE: BOOL;
	START_STRAIGHTENER: R_TRIG;
	READY_1: BOOL;
	READY_2: BOOL;
	RR: BOOL;
	RX: R_TRIG;
	TRIG_IND2: R_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT FLAG_VAR.PAUSE_SYSTEM THEN
	//INPUT_CARTESSIAN(); 
	INPUT_G6();
	INDEXING();
	INDEXING_2();
	INPUT_PROG();
	LOADER_RS4();
	SORTER_RS4();
	STRAIGHTENING_PROG_1(); 
	LASER_PROG();
	TESTER_C8();
	//INPUT_G6_VAR.I_G6_ENABLE:=TRUE;
	(*
	//INPUT_G6_VAR.I_G6_ENABLE:=TRUE;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[0]:=0;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[1]:=1;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[2]:=2;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[3]:=3;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[4]:=4;
	//LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE := TRUE;//LOADER_RS4_VAR.I_LOADER_RS4_READY_PLACING;
	*) 
//IF LOADER_RS4_VAR.I_LOADER_RS4_READY THEN
	LOADER_RS4_VAR.POSITION_TOOL_1:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[1];
	LOADER_RS4_VAR.POSITION_TOOL_2:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[2];
	LOADER_RS4_VAR.POSITION_TOOL_3:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[3];
	LOADER_RS4_VAR.POSITION_TOOL_4:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[4];
//END_IF
	SORTER_RS4_VAR.SORTER_RS4_POS_TAKEUP_1 := SORTER_VAR.I_LASER_SOCKET.AVAILABLE_SOCKET[1];
	SORTER_RS4_VAR.SORTER_RS4_POS_TAKEUP_2 := SORTER_VAR.I_LASER_SOCKET.AVAILABLE_SOCKET[2];
	SORTER_RS4_VAR.SORTER_RS4_POS_TAKEUP_3 := SORTER_VAR.I_LASER_SOCKET.AVAILABLE_SOCKET[3];
	SORTER_RS4_VAR.SORTER_RS4_POS_TAKEUP_4 := SORTER_VAR.I_LASER_SOCKET.AVAILABLE_SOCKET[4];
	SORTER_RS4_VAR.SORTER_RS4_POS_PLACING_1 := SORTER_VAR.I_LASER_SOCKET.LASER_DESTINATION[1];
	SORTER_RS4_VAR.SORTER_RS4_POS_PLACING_2 := SORTER_VAR.I_LASER_SOCKET.LASER_DESTINATION[2];
	SORTER_RS4_VAR.SORTER_RS4_POS_PLACING_3 := SORTER_VAR.I_LASER_SOCKET.LASER_DESTINATION[3];
	SORTER_RS4_VAR.SORTER_RS4_POS_PLACING_4 := SORTER_VAR.I_LASER_SOCKET.LASER_DESTINATION[4];
	
 	IF NOT FLAG_VAR.ALLOW_EXECUTE_LOAD_FUKUDA AND NOT FLAG_VAR.ALLOW_EXECUTE_RETURN_FUKUDA THEN 
		input_var.O_VACUUM_ON:=FALSE;	 
		input_var.O_VACUUM_OFF:=FALSE;	
	END_IF
	//CARTESSIAN INPUT
	IF FLAG_VAR.ALLOW_EXECUTE_LOAD_FUKUDA THEN 
		IF INPUT_VAR.I_CASE>=100 THEN
			INPUT_VAR.I_CASE:=0;
			IC_CASE:=0;	
		END_IF			
		LOAD_FUKUDA();
		FLAG_VAR.ALLOW_EXECUTE_RETURN_FUKUDA:=FALSE;
	END_IF
	IF FLAG_VAR.ALLOW_EXECUTE_RETURN_FUKUDA THEN 
		IF INPUT_VAR.I_CASE>=100 THEN
			INPUT_VAR.I_CASE:=0;
			IC_CASE:=0;
		END_IF	
		RETURN_FUKUDA();
		FLAG_VAR.ALLOW_EXECUTE_LOAD_FUKUDA:=FALSE;	
	END_IF

	IF FLAG_VAR.ALLOW_EXECUTE_LOAD_LASER THEN 
		IF SORTER_VAR.I_CASE>=100 THEN
			SORTER_VAR.I_CASE:=0;
			IC_CASE:=0;	
		END_IF			 
		LOAD_LASER();
		FLAG_VAR.ALLOW_EXECUTE_LOAD_NG:=FALSE;
		FLAG_VAR.ALLOW_EXECUTE_RETURN_NG:=FALSE;
		FLAG_VAR.ALLOW_EXECUTE_RETURN_LASER:=FALSE;
	END_IF
	IF FLAG_VAR.ALLOW_EXECUTE_RETURN_LASER THEN 
		IF SORTER_VAR.I_CASE>=100 THEN
			SORTER_VAR.I_CASE:=0;
			IC_CASE:=0;
		END_IF	
		RETURN_LASER();	
		FLAG_VAR.ALLOW_EXECUTE_LOAD_NG:=FALSE;
		FLAG_VAR.ALLOW_EXECUTE_RETURN_NG:=FALSE;
		FLAG_VAR.ALLOW_EXECUTE_LOAD_LASER:=FALSE;
	END_IF

	IF FLAG_VAR.ALLOW_EXECUTE_LOAD_NG THEN 
		IF SORTER_VAR.I_NG_CASE >=100 THEN
			SORTER_VAR.I_NG_CASE:=1;
		END_IF		
		LOAD_NG();
		FLAG_VAR.ALLOW_EXECUTE_RETURN_LASER:=FALSE;	
		FLAG_VAR.ALLOW_EXECUTE_LOAD_LASER:=FALSE;
		FLAG_VAR.ALLOW_EXECUTE_RETURN_NG:=FALSE;
	END_IF

	IF FLAG_VAR.ALLOW_EXECUTE_RETURN_NG THEN 
		IF SORTER_VAR.I_NG_CASE >=100 THEN
			SORTER_VAR.I_NG_CASE:=1;
		END_IF
		RETURN_NG();
		FLAG_VAR.ALLOW_EXECUTE_RETURN_LASER:=FALSE;	
		FLAG_VAR.ALLOW_EXECUTE_LOAD_LASER:=FALSE;
		FLAG_VAR.ALLOW_EXECUTE_LOAD_NG:=FALSE;	
	END_IF
	INPUT_VAR.O_TOWER_LAMP_GREEN:=TRUE;
	SORTER_VAR.O_TOWER_LAMP_GREEN:=TRUE;
	
	
	(*	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_1:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_1:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_2:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_2:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_3:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_3:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_4:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_4:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_1:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_1:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_2:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_2:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_3:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_3:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_4:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_4:=FALSE; *)
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="472" Count="0" />
      <LineId Id="6" Count="1" />
      <LineId Id="201" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="413" Count="0" />
      <LineId Id="285" Count="0" />
      <LineId Id="606" Count="0" />
      <LineId Id="552" Count="0" />
      <LineId Id="815" Count="0" />
      <LineId Id="824" Count="0" />
      <LineId Id="822" Count="0" />
      <LineId Id="816" Count="4" />
      <LineId Id="823" Count="0" />
      <LineId Id="821" Count="0" />
      <LineId Id="630" Count="4" />
      <LineId Id="701" Count="8" />
      <LineId Id="849" Count="0" />
      <LineId Id="657" Count="0" />
      <LineId Id="846" Count="0" />
      <LineId Id="848" Count="0" />
      <LineId Id="847" Count="0" />
      <LineId Id="635" Count="0" />
      <LineId Id="450" Count="0" />
      <LineId Id="314" Count="4" />
      <LineId Id="770" Count="0" />
      <LineId Id="319" Count="6" />
      <LineId Id="771" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="516" Count="6" />
      <LineId Id="758" Count="1" />
      <LineId Id="766" Count="0" />
      <LineId Id="523" Count="6" />
      <LineId Id="760" Count="1" />
      <LineId Id="767" Count="0" />
      <LineId Id="530" Count="0" />
      <LineId Id="308" Count="0" />
      <LineId Id="574" Count="0" />
      <LineId Id="732" Count="0" />
      <LineId Id="575" Count="0" />
      <LineId Id="733" Count="0" />
      <LineId Id="731" Count="0" />
      <LineId Id="762" Count="1" />
      <LineId Id="768" Count="0" />
      <LineId Id="580" Count="2" />
      <LineId Id="734" Count="2" />
      <LineId Id="583" Count="0" />
      <LineId Id="764" Count="1" />
      <LineId Id="769" Count="0" />
      <LineId Id="584" Count="0" />
      <LineId Id="679" Count="0" />
      <LineId Id="793" Count="0" />
      <LineId Id="871" Count="24" />
      <LineId Id="306" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>